--- a/papers.html
+++ b/papers.html
@@ -4,154 +4,12 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Papers · Nikita Safonkin</title>
-
-  <style>
-    :root{
-      /* 🔥 Put your beloved accent color here (hex), e.g. #2aa198 */
-      --accent: #1155cc;
-
-      --bg: #fbfcfd;
-      --card: #ffffff;
-      --text: #111;
-      --muted: #555;
-      --border: rgba(0,0,0,.12);
-    }
-
-    *{ box-sizing: border-box; }
-
-    html{ scrollbar-gutter: stable; } /* prevents tiny alignment jumps between short/long pages */
-
-    body{
-      margin: 0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-      background: var(--bg);
-      color: var(--text);
-    }
-
-    .topbar{
-      position: sticky;
-      top: 0;
-      background: rgba(255,255,255,.9);
-      backdrop-filter: blur(10px);
-      border-bottom: 1px solid var(--border);
-      z-index: 10;
-    }
-
-    .nav{
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 12px 18px;
-      display: flex;
-      gap: 12px;
-      flex-wrap: wrap;
-      align-items: center;
-    }
-
-    .brand{
-      font-weight: 750;
-      text-decoration: none;
-      color: var(--text);
-      margin-right: 10px;
-    }
-
-    .nav a{
-      text-decoration: none;
-      color: var(--muted);
-      padding: 6px 10px;
-      border-radius: 10px;
-    }
-
-    .nav a.active{
-      color: var(--accent);
-      border: 1px solid color-mix(in srgb, var(--accent) 35%, transparent);
-      background: color-mix(in srgb, var(--accent) 10%, white);
-    }
-
-    .wrap{
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 26px 18px 60px;
-    }
-
-    .hero{
-      padding: 18px;
-      border-radius: 18px;
-      border: 1px solid color-mix(in srgb, var(--accent) 22%, transparent);
-      background: linear-gradient(135deg,
-        color-mix(in srgb, var(--accent) 12%, white),
-        white);
-    }
-
-    h1{ margin: 0 0 6px; font-size: 1.9rem; }
-    .sub{ color: var(--muted); }
-
-    /* ✅ Each paper is its own framed mini-card */
-    ol.papers{
-      list-style: none;
-      padding-left: 0;
-      margin: 16px 0 0;
-    }
-
-    li.paperitem{
-      margin: 14px 0;
-      padding: 14px 16px;
-      border: 1px solid var(--border);
-      border-radius: 16px;
-      background: var(--card);
-    }
-
-    .paper-title{ font-weight: 750; }
-    .paper-authors{ margin-top: 4px; color: var(--muted); }
-    .paper-venue{ margin-top: 4px; color: var(--muted); }
-
-    .paper-links{
-      display: flex;
-      gap: 8px;
-      flex-wrap: wrap;
-      margin-top: 10px;
-      margin-bottom: 10px;
-    }
-
-    .pill{
-      display: inline-block;
-      padding: 7px 11px;
-      border-radius: 999px;
-      border: 1px solid var(--accent);
-      color: var(--accent);
-      background: transparent;
-      font: inherit;
-      font-size: .92rem;
-      line-height: 1;
-      cursor: pointer;
-      text-decoration: none;
-      user-select: none;
-    }
-
-    .pill:hover{ background: var(--accent); color: white; }
-
-    .pill.disabled{
-      opacity: .45;
-      cursor: default;
-      pointer-events: none;
-    }
-
-    .abstract{
-      margin-left: 2px;
-      margin-top: 10px;
-      margin-bottom: 4px;
-      border-left: 3px solid var(--accent);
-      padding-left: 12px;
-    }
-
-    .is-hidden{ display: none; }
-  </style>
+  <link rel="stylesheet" href="assets/style.css">
 
   <!-- MathJax (keeps your LaTeX in abstracts working) -->
   <script>
     window.MathJax = {
-      tex: {
-        macros: { Bbbk: "{\\mathbb{k}}" }
-      }
+      tex: { macros: { Bbbk: "{\\mathbb{k}}" } }
     };
   </script>
   <script id="MathJax-script" async
@@ -159,7 +17,6 @@
 </head>
 
 <body>
-
 <header class="topbar">
   <nav class="nav">
     <a class="brand" href="index.html">Nikita Safonkin</a>
@@ -180,7 +37,7 @@
     <li class="paperitem">
       <div class="paper-title"><i>What is a double star-product?</i></div>
       <div class="paper-authors">N. Safonkin</div>
-      <div class="paper-venue">(2025) · arXiv:2506.00699</div>
+      <div class="paper-venue">(2025) </div>
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-1">Abstract</button>
@@ -198,7 +55,7 @@
     <li class="paperitem">
       <div class="paper-title"><i>Double Poisson brackets and involutive representation spaces</i></div>
       <div class="paper-authors">G. Olshanski, N. Safonkin</div>
-      <div class="paper-venue">Letters in Mathematical Physics 114, 33 (2024) · arXiv:2310.01086</div>
+      <div class="paper-venue">Letters in Mathematical Physics 114, 33 (2024) </div>
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-2">Abstract</button>
@@ -216,7 +73,7 @@
     <li class="paperitem">
       <div class="paper-title"><i>Remarks on Yangian-Type Algebras and Double Poisson Brackets</i></div>
       <div class="paper-authors">G. Olshanski, N. Safonkin</div>
-      <div class="paper-venue">Functional Analysis and Its Applications 57, 326–336 (2023) · arXiv:2308.13325</div>
+      <div class="paper-venue">Functional Analysis and Its Applications 57, 326–336 (2023) </div>
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-3">Abstract</button>
@@ -233,7 +90,7 @@
     <li class="paperitem">
       <div class="paper-title"><i>Semifinite harmonic functions on the direct product of graded graphs</i></div>
       <div class="paper-authors">P. Nikitin, N. Safonkin</div>
-      <div class="paper-venue">Zapiski Nauchnykh Seminarov POMI 517, 125–150 (2022) · arXiv:2209.05901</div>
+      <div class="paper-venue">Zapiski Nauchnykh Seminarov POMI 517, 125–150 (2022) </div>
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-4">Abstract</button>
@@ -250,7 +107,7 @@
     <li class="paperitem">
       <div class="paper-title"><i>Semifinite harmonic functions on the zigzag graph</i></div>
       <div class="paper-authors">N. Safonkin</div>
-      <div class="paper-venue">Functional Analysis and Its Applications 56:3, 52–74 (2022) · arXiv:2110.01508</div>
+      <div class="paper-venue">Functional Analysis and Its Applications 56:3, 52–74 (2022) </div>
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-5">Abstract</button>
@@ -267,7 +124,7 @@
     <li class="paperitem">
       <div class="paper-title"><i>Semifinite Harmonic Functions on Branching Graphs</i></div>
       <div class="paper-authors">N. Safonkin</div>
-      <div class="paper-venue">Journal of Mathematical Sciences (New York) 261, 669–686 (2022) · arXiv:2108.07850</div>
+      <div class="paper-venue">Journal of Mathematical Sciences (New York) 261, 669–686 (2022) </div>
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-6">Abstract</button>
@@ -284,7 +141,7 @@
     <li class="paperitem">
       <div class="paper-title"><i>Semifinite Harmonic Functions on the Gnedin–Kingman Graph</i></div>
       <div class="paper-authors">N. Safonkin</div>
-      <div class="paper-venue">Journal of Mathematical Sciences (New York) 255, 132–142 (2021) · arXiv:2103.02257</div>
+      <div class="paper-venue">Journal of Mathematical Sciences (New York) 255, 132–142 (2021) </div>
 
       <div class="paper-links">
         <button class="pill" type="button" data-toggle="abs-7">Abstract</button>
