--- a/index.html
+++ b/index.html
@@ -51,20 +51,6 @@
       border-radius: 12px;
     }
 
-    /* About links row */
-    .about-links{
-      margin-top: 12px;
-      padding-top: 10px;
-      border-top: 1px solid var(--border);
-      color: var(--muted);
-      line-height: 1.5;
-    }
-    .about-links a{
-      color: var(--accent);
-      text-decoration: none;
-    }
-    .about-links a:hover{ text-decoration: underline; }
-
     /* Mobile: Photo -> About -> Contact */
     @media (max-width: 900px){
       .home-grid{
@@ -108,23 +94,15 @@
         </div>
 
         <div class="row">
-          <div class="label">Affiliation</div>
-          <div class="value">Leipzig University</div>
+          <div class="label">Office</div>
+          <div class="value">Neues Augusteum, room A409</div>
         </div>
 
         <div class="row">
-          <div class="label">Office / Address</div>
+          <div class="label">Address</div>
           <div class="value">
-            Neues Augusteum room A409<br>
             Augustusplatz 10<br>
             04109 Leipzig
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="label">Links</div>
-          <div class="value">
-            <a href="https://arxiv.org/search/?searchtype=author&query=Safonkin%2C+N" target="_blank" rel="noopener">arXiv</a>
           </div>
         </div>
 
@@ -138,15 +116,14 @@
         I am a postdoctoral researcher in the Department of Mathematics at Leipzig University.
         I completed my PhD at the University of Reims Champagne-Ardenne in 2023.
       </p>
-      <p style="margin:0;">
+      <p style="margin:0 0 10px;">
         I am interested in noncommutative algebra, representation theory, and algebraic combinatorics,
         with connections to noncommutative Poisson geometry and deformation quantization.
       </p>
-
-      <div class="about-links">
-        <strong>Links:</strong>
-        <a href="YOUR_CV_LINK_HERE" target="_blank" rel="noopener">CV</a>
-      </div>
+      <p style="margin:0;">
+        My CV is available here:
+        <a href="YOUR_CV_LINK_HERE" target="_blank" rel="noopener">CV</a>.
+      </p>
     </div>
 
     <!-- Photo (right) -->
@@ -159,4 +136,3 @@
 </main>
 </body>
 </html>
-
